--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
-        "body-parser": "^1.18.3",
-        "concurrently": "^4.1.0",
-        "express": "^4.16.4",
+        "body-parser": "^1.19.0",
+        "concurrently": "^5.0.0",
+        "express": "^4.17.1",
         "gravatar": "^1.8.0",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.4.22",
+        "mongoose": "^5.7.14",
         "passport": "^0.4.0",
         "passport-jwt": "^4.0.0",
-        "validator": "^10.11.0"
+        "react": "^16.12.0",
+        "validator": "^12.1.0"
     },
     "devDependencies": {
-        "nodemon": "^1.18.10"
+        "nodemon": "^2.0.1"
     }
 }
