--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "axios": "^0.18.1",
         "classnames": "^2.2.6",
+        "devcircle": "file:..",
         "jwt-decode": "^2.2.0",
         "moment": "^2.24.0",
         "react": "^16.12.0",
@@ -12,7 +13,7 @@
         "react-moment": "^0.9.7",
         "react-redux": "^7.1.3",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "2.1.8",
+        "react-scripts": "^5.0.1",
         "redux": "^4.0.4",
         "redux-devtools-extension": "^2.13.8",
         "redux-thunk": "^2.3.0",
