--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "author": "Wesley Wei",
     "license": "ISC",
     "dependencies": {
+        "@cypress/request": "^3.0.1",
         "bcryptjs": "^2.4.3",
+        "client": "^0.0.1",
         "config": "^3.1.0",
         "express": "^4.16.4",
-        "express-validator": "^5.3.1",
+        "express-validator": "^7.0.1",
         "gravatar": "^1.8.0",
-        "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.7.5",
-        "request": "^2.88.0"
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^5.7.5"
     },
     "devDependencies": {
         "concurrently": "^5.0.0",
-        "nodemon": "^2.0.1"
+        "nodemon": "^3.0.2"
     }
 }
