--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "server": "nodemon server.js",
         "client": "npm start --prefix client",
         "dev": "concurrently \"npm run server\" \"npm run client\"",
-        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+        "flyio-start": "NODE_ENV=production npm install --prefix client && npm run build --prefix client && node server.js"
     },
     "author": "Wesley Wei",
     "license": "ISC",
@@ -25,6 +26,7 @@
         "mongoose": "^5.7.5"
     },
     "devDependencies": {
+        "@flydotio/dockerfile": "^0.5.0",
         "concurrently": "^5.0.0",
         "nodemon": "^3.0.2"
     }
